--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+FACEBOOK_REDIRECT=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
