Adding LinkedIn, Google. Fixing register, login

--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,17 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-
 FACEBOOK_ID=
 FACEBOOK_SECRET=
 FACEBOOK_REDIRECT=
+
+GOOGLE_ID=
+GOOGLE_SECRET=
+GOOGLE_REDIRECT=
+
+LINKEDIN_ID=
+LINKEDIN_SECRET=
+LINKEDIN_REDIRECT=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
